--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,10 @@
             "database/seeds",
             "database/factories",
             "database",
-            "vendor/google/apiclient/src/Google"
-              
+            "vendor/google/apiclient/src/Google",
+            "app/Libraries"
+        ],
+        "files": [            
         ],
         "psr-4": {
             "App\\": "app/"
